# PapiJeff

./: .env  backend.py  frontend.py  pyproject.toml  utils.py
env/Scripts/: activate  activate.bat
