[project]
name = "Chunk"
version = "0.1.0"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.8",
    "groq>=0.18.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "streamlit>=1.42.1",
    "uvicorn>=0.34.0",
]
